Update font styles and sizes in emailfrontend.html

--- a/NLIMG Auto Mailing/emailfrontend.html
+++ b/NLIMG Auto Mailing/emailfrontend.html
@@ -23,7 +23,7 @@
  
 <tr> 
     <td style="width:0%;">&nbsp;</td> 
-    <td style="color: white;background-color:black;height:120px;font-size:80px;font-family:Canter;src: url('fonts/Canter/Canter-Bold.woff') format('truetype');"><b>&nbsp;Greetings from NetX! </b> </td>  
+    <td style="color: white;background-color:black;height:40px;font-size:30px;font-family:'Century Gothic', sans-serif;">&nbsp;Greetings from NetX! </td>  
     <td style="width:0%">&nbsp;</td> 
 </tr>
 
@@ -36,13 +36,13 @@
 
 <tr> 
    <td style="width:0%;">&nbsp;</td> 
-   <td style="color: white;font-size:10px;text-align: center;background-color:black;height:70px;font-size:80px;font-family:Canter;src: url('fonts/Canter/Canter-Bold.woff') format('truetype');">  Sent from NetX club MACE </td> 
+   <td style="color: white;font-size:10px;text-align: center;background-color:black;height:40px;font-size:20px;font-family:'Century Gothic', sans-serif;">  Sent from NetX club MACE </td> 
    <td style="width:0%">&nbsp;</td> 
 </tr>
 
 <tr> 
    <td style="width:0%;">&nbsp;</td> 
-   <td style="color: white;font-size:10px;text-align: center;background-color:black;height:70px;font-size:80px;font-family:Canter;src: url('fonts/Canter/Canter-Bold.woff') format('truetype');"> <i>*Click the image to visit our webpage</i> </td> 
+   <td style="color: white;font-size:10px;text-align: center;background-color:black;height:40px;font-size:20px;font-family:'Century Gothic', sans-serif;"> <i>*Click the image to visit our webpage</i> </td> 
    <td style="width:0%">&nbsp;</td> 
 </tr>
  
